--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,8 +1,9 @@
 <form (ngSubmit)=onSubmit(f) #f="ngForm">
   <table class="table">
-    <tr><td>Name:</td><td><input type="text" class="form-control" name="name" id="" ngModel></td></tr>
-    <tr><td>Email:</td><td><input type="email" class="form-control" name="email" id="" ngModel></td></tr>
-    <tr><td>Message:</td><td><textarea name="msg" class="form-control" id="" cols="30" rows="3" ngModel></textarea></td></tr>
+    <tr><td>Name:</td><td><input type="text" class="form-control" name="ename" id="" ngModel></td></tr>
+    <tr><td>Email:</td><td><input type="email" class="form-control" name="eemail" id="" ngModel></td></tr>
+    <tr><td>Mobile:</td><td><input type="text" class="form-control" name="emob" id="" ngModel></td></tr>
+    <tr><td>Message:</td><td><textarea name="emsg" class="form-control" id="" cols="30" rows="3" ngModel></textarea></td></tr>
     <tr><td></td><td><input type="submit" class="btn btn-primary" value="Submit"></td></tr>
   </table>
 </form>
