--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" routerLink="/">Contact Us</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/view">View All</a>
       </li>
     </ul>
   </nav>
