--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,5 +6,8 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/view">View All</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/search">Search</a>
+      </li>
     </ul>
   </nav>
