--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,14 @@
-<p *ngIf="status else nodata">
+<!-- <p *ngIf="status else nodata">
   search works!
 </p>
 
-<ng-template #nodata>No data available</ng-template>
+<ng-template #nodata>No data available</ng-template> -->
+
+<div *ngIf="status else nodata">
+  <form (ngSubmit)=onSubmit(f) #f="ngForm">
+    <table class="table">
+      <tr><td>Mobile:</td><td><input type="text" class="form-control" name="emob" id=""></td></tr>
+      <tr><td></td><td><input type="submit" class="btn btn-primary" value="Search"></td></tr>
+    </table>
+  </form>
+</div>
